Revert back to squishit.

--- a/Zbang.Cloudents.Mvc4WebRole/Images/Web.config
+++ b/Zbang.Cloudents.Mvc4WebRole/Images/Web.config
@@ -4,5 +4,15 @@
     <staticContent>
       <clientCache cacheControlCustom="public" cacheControlMode="UseMaxAge" cacheControlMaxAge="180.00:00:00"  />
     </staticContent>
+    <httpProtocol>
+      <customHeaders>
+        <remove name="Access-Control-Allow-Origin" />
+        <add name="Access-Control-Allow-Origin" value="*" />
+        <remove name="Access-Control-Allow-Headers"/>
+        <add name="Access-Control-Allow-Headers" value="X-Requested-With"/>
+        <remove name="Strict-Transport-Security" />
+        <add name="Strict-Transport-Security" value="max-age=0" />
+      </customHeaders>
+    </httpProtocol>
   </system.webServer>
 </configuration>
