User activity now saves upon visited in universitychoose page.

--- a/Zbang.Zbox.Domain.CommandHandlers/Zbang.Zbox.Domain.CommandHandlers.csproj
+++ b/Zbang.Zbox.Domain.CommandHandlers/Zbang.Zbox.Domain.CommandHandlers.csproj
@@ -64,6 +64,7 @@
     <Compile Include="AddQuestionCommandHandler.cs" />
     <Compile Include="AddItemReplyToCommentCommandHandler.cs" />
     <Compile Include="AddStudentCommandHandler.cs" />
+    <Compile Include="AddUserLocationActivityCommandHandler.cs" />
     <Compile Include="AssignItemToTabCommandHandler.cs" />
     <Compile Include="ChangeBoxInfoCommandHandler.cs" />
     <Compile Include="ChangeBoxLibraryCommandHandler.cs" />
