--- a/Zbang.Zbox.Domain.Commands/Zbang.Zbox.Domain.Commands.csproj
+++ b/Zbang.Zbox.Domain.Commands/Zbang.Zbox.Domain.Commands.csproj
@@ -69,6 +69,7 @@
     <Compile Include="AddNodeToLibraryCommand.cs" />
     <Compile Include="AddItemReplyToCommentCommand.cs" />
     <Compile Include="AddStudentCommand.cs" />
+    <Compile Include="AddUserLocationActivityCommand.cs" />
     <Compile Include="AssignItemToTabCommand.cs" />
     <Compile Include="ChangeBoxInfoCommand.cs" />
     <Compile Include="ChangeBoxLibraryCommand.cs" />
